[package]
name = "pingxelflut"
description = "A common datastructure and utility backend for Pingxelflut implementations"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
socket2 = { version = "0.5.7", features = ["all"] }
async-channel = "2.3.1"
etherparse = "0.15.0"
