[package]
name = "server"
description = "Simple pingxelflut server"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.3"
log = "0.4.21"
pingxelflut = { path = "../pingxelflut" }
parking_lot = "0.12.3"
pixels = "0.13.0"
rgb = "0.8.37"
tokio = { version = "1.38.0", features = ["macros", "net", "rt-multi-thread"] }
# Need Raw Window Handle v0.5, see https://github.com/parasyte/pixels/issues/379
winit = { version = "0.30.0", features = ["rwh_05"] }
futures = { version = "0.3.30", default-features = false }
etherparse = "0.15.0"
async-channel = "2.3.1"
